--- a/index.html
+++ b/index.html
@@ -3,12 +3,158 @@
 <head>
 	<meta charset="utf-8">
 	<script src="js/d3.min.js" charset="utf-8"></script>
+	<style>
+
+		body {
+			overflow: hidden;
+			margin: 0;
+			padding: 0;
+			background: #ecf0f1;
+		}
+
+		#click-here {
+			position: absolute;
+			font-family: Montserrat;
+			width: 200px;
+			height: 200px;
+			top: 50%;
+			left: 50%;
+			margin-left:-80px;
+			margin-top: -90px;
+			text-align: center;
+			border:1px solid #bdc3c7;
+			border-radius: 400px;
+			box-shadow: 0px 0px 60px #bbb;
+		}
+
+		#input {
+			outline: none;
+			padding: 0;
+			color: #555;
+			margin: 0;
+			font-family: Montserrat;
+			background: none;
+			border: none;
+			font-size: 20px;
+			margin-top: 85px;
+			text-align: center;
+			width: 200px;
+		}
+
+		#container {
+			opacity: 0;
+			display: none;
+			position: absolute;
+			overflow: hidden;
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+		}
+
+		.link {
+		  stroke: #8eaed2;
+		}
+
+		.node text {
+			text-anchor: middle;
+		  pointer-events: none;
+		  font-size: 18px;
+		  font-family: Montserrat;
+		}
+
+	</style>
 </head>
 <body>
-	<div id="container">
+	<div id="click-here" onclick="initialInput()" onkeyup="inputReady()">
+		<input id="input" placeholder="Add Hashtag" />
 	</div>
-	<script type="text/javascript">
-	
-	</script>
+	<div id="container"></div>
+
+	<script>
+
+	function initialInput() {
+		d3.select("#click-here").transition().duration(1000).style("opacity","0")
+		d3.select("#container").style("display","block")
+		drawChart();
+		d3.select("#container").transition().duration(2000).style("opacity","1")
+	}
+
+	function inputReady() {
+		d3.select("#click-here").style("border","1px solid #205e9b").style("box-shadow","0px 0px 60px #8eaed2").style("background","#8eaed2")
+		console.log(d3.select("#input").text())
+	}
+
+	function initialInput() {
+		d3.select("#click-here").transition().duration(1000).style("opacity","0")
+		d3.select("#container").style("display","block")
+		drawChart();
+		d3.select("#container").transition().duration(2000).style("opacity","1")
+	}
+
+	function drawChart() {
+			var width = window.innerWidth,
+	    height = window.innerHeight
+
+	var svg = d3.select("#container").append("svg")
+	    .attr("width", width)
+	    .attr("height", height);
+
+	var force = d3.layout.force()
+	    .gravity(.05)
+	    .distance(150)
+	    .charge(-500)
+	    .size([width, height]);
+
+		d3.json("data/graph.json", function(error, json) {
+		  force
+		      .nodes(json.nodes)
+		      .links(json.links)
+		      .start();
+
+		  var link = svg.selectAll(".link")
+		      .data(json.links)
+		    .enter().append("line")
+		    	.attr("stroke-width", 4)
+		      .attr("class", "link");
+
+		  var node = svg.selectAll(".node")
+		      .data(json.nodes)
+		    .enter().append("g")
+		      .attr("class", "node")
+		      .call(force.drag);
+
+		  node.append("circle")
+		      .attr("r", 50)
+		      .attr("fill", "#447cb3")
+		      .attr("stroke", "#205e9b")
+		      .attr("stroke-width", 3)
+		      .attr("cx", 0)
+		      .attr("cy", 0);
+
+		  node.append("text")
+		  		.attr("class", "label")
+		  		.attr("onclick", "alert('sdlfjk')")
+		      .attr("dx", 0)
+		      .attr("dy", ".35em")
+		      .attr("fill", "#fff")
+		      .text(function(d) { return d.name });
+
+		  force.on("tick", function() {
+		    link.attr("x1", function(d) { return d.source.x; })
+		        .attr("y1", function(d) { return d.source.y; })
+		        .attr("x2", function(d) { return d.target.x; })
+		        .attr("y2", function(d) { return d.target.y; });
+
+		    node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+		  });
+		});
+	}
+
+	function editLabel(e) {
+		alert(e);
+	}
+
+</script>
 </body>
 </html>
