--- a/index.html
+++ b/index.html
@@ -73,6 +73,35 @@
 
 	<script>
 
+	function sendRequest() {
+	    var xmlhttp;
+
+	    if (window.XMLHttpRequest) {
+	        // code for IE7+, Firefox, Chrome, Opera, Safari
+	        xmlhttp = new XMLHttpRequest();
+	    } else {
+	        // code for IE6, IE5
+	        xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+	    }
+
+	    xmlhttp.onreadystatechange = function() {
+	        if (xmlhttp.readyState == 4 ) {
+	           if(xmlhttp.status == 200){
+	               document.getElementById("myDiv").innerHTML = xmlhttp.responseText;
+	           }
+	           else if(xmlhttp.status == 400) {
+	              alert('There was an error 400')
+	           }
+	           else {
+	               alert('something else other than 200 was returned')
+	           }
+	        }
+	    }
+
+	    xmlhttp.open("GET", "ajax_info.txt", true);
+	    xmlhttp.send();
+	}
+
 	function initialInput() {
 		d3.select("#click-here").transition().duration(1000).style("opacity","0");
 		d3.select("#container").style("display","block");
