--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 	function sendData(params) {
 		var http = new XMLHttpRequest();
-		var url = "py/server.py";
-		http.open("GET", url+"?"+params, true);
+		var url = "http://0.0.0.0:8084"//"py/server.py";
+		http.open("GET", url+"/put?q="+params, true);
 		http.onreadystatechange = function() {//Call a function when the state changes.
 			if(http.readyState == 4 && http.status == 200) {
 				alert(http.responseText);
