--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 		    .attr("height", height);
 
 		var force = d3.layout.force()
-		    .gravity(.05)
-		    .distance(220)
+		    .gravity(.01)
+		    .distance(700)
 		    .charge(-500)
 		    .linkDistance(200)
 		    .size([width, height]);
@@ -154,7 +154,7 @@
 		      .call(force.drag);
 
 		  node.append("circle")
-		      .attr("r", 70)
+		      .attr("r", 75)
 		      .attr("fill", function(d) { return getColor(d.score) })
 		      .attr("stroke", function(d) { return getStrokeColor(d.score) })
 		      .attr("stroke-width", 2)
@@ -184,7 +184,7 @@
 	}
 
 	function clearChart() {
-		d3.select("svg").remove();
+		d3.select("#container").select("svg").remove();
 	}
 
 	function getColor(d) {
